# IncidraAi

./: .coverage  .env.example  .gitignore  CELERY_IMPLEMENTATION_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  README.md  REDIS_QUICK_INSTALL.md  TESTING_GUIDE.md  TESTING_QUICK_REF.md  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  run-tests.ps1  run-tests.sh  tempCodeRunnerFile.ps1  tsconfig.base.json  turbo.json  vitest.config.ts
apps/api/: .coverage  .dockerignore  .env.example  .gitignore  CELERY_QUICKSTART.md  CELERY_README.md  CI_CD_README.md  DATABASE_QUICK_START.md  DATABASE_SETUP.md  DockerFile  LOCAL_SETUP.md  QUICK_START_WINDOWS.md  RAG_README.md  REDIS_SETUP_WINDOWS.md  TEST_GUIDE.md  check_quality_gates.ps1  check_quality_gates.sh  coverage.xml  examples_clustering.py  install_celery_deps.ps1  install_redis_windows.ps1  pyproject.toml  railway.toml  setup_redis.ps1  start_redis.py  test_clustering.ps1  verify_database.py
apps/api/migrations/: 001_initial_schema.sql
apps/api/scripts/: migrate.py  seed_database.py
apps/api/src/: __init__.py  celery_app.py  client.py  config.py  dedup.py  main.py  observability.py  rag.py  routes_clustering.py  routes_incidents.py  routes_logs.py  routes_rag.py  routes_triage.py  tasks.py  types_api.py
apps/api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/test/: locustfile.py  test_celery.py  test_clustering_unit.py  test_integration.py  test_python_client.py  test_rag_evaluation.py  test_rag_integration.py  test_runtime_quality.py
apps/api/vector_db/: chroma.sqlite3
(+8 files in other folders)
